--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^14.8.1
   logging: ^1.3.0
-  shared_preferences: 2.3.5
+  shared_preferences: 2.5.3
+  flutter_svg: ^2.0.17
+  provider: ^6.1.4
 
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +30,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
 
   assets:
     - assets/questions/
