--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,6 @@ dependencies:
   logging: ^1.3.0
   flutter_svg: ^2.0.17
 
-
   #state 
   bloc: ^9.0.0
   provider: ^6.1.4
@@ -32,11 +31,16 @@ dependencies:
 
   #DI
   get_it: ^8.0.3
+  freezed: ^3.0.6
+  freezed_annotation: ^3.0.0
+  build_runner: ^2.4.15
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  json_serializable: ^6.9.5
 
 flutter:
   uses-material-design: true
