--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,19 @@ dependencies:
 
   #DI
   get_it: ^8.0.3
-  freezed: ^3.0.6
-  freezed_annotation: ^3.0.0
-  build_runner: ^2.4.15
   json_annotation: ^4.9.0
+  hive_flutter: ^1.1.0
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   json_serializable: ^6.9.5
+  freezed: ^3.0.6
+  build_runner: ^2.4.15
+
 
 flutter:
   uses-material-design: true
