--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   json_annotation: ^4.9.0
   hive_flutter: ^1.1.0
 
+  #gauges chart
+  syncfusion_flutter_gauges: ^29.2.4
+  intl: ^0.20.2
 
 
 dev_dependencies:
