--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   
   json_annotation: ^4.9.0
   json_serializable: ^6.9.5
+  csv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -55,3 +56,4 @@ flutter:
 
   assets:
     - assets/drawables/
+    - assets/bank/
