--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,9 @@ dependencies:
   #gauges chart
   syncfusion_flutter_gauges: ^29.2.4
   intl: ^0.20.2
-
-  freezed: ^3.0.6
-  freezed_annotation: ^3.0.0
   
   json_annotation: ^4.9.0
-  json_serializable: ^6.9.5
+  
   csv: ^6.0.0
 
 dev_dependencies:
@@ -49,6 +46,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   build_runner: ^2.4.15
+  json_serializable: ^6.9.0
+  hive_generator: ^2.0.1
 
 
 flutter:
