--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,30 +11,28 @@ dependencies:
   flutter:
     sdk: flutter
 
-  equatable: ^2.0.0
+  equatable: ^2.0.7
 
   #navigation
-  go_router: ^15.0.0
+  go_router: ^16.2.1
 
   #utils
   logging: ^1.3.0
-  flutter_svg: ^2.0.17
+  flutter_svg: ^2.2.1
 
   #state 
   bloc: ^9.0.0
-  provider: ^6.1.4
-  flutter_bloc: ^9.1.0
+  provider: ^6.1.5
+  flutter_bloc: ^9.1.1
 
   # Database
   hive: ^2.2.3
   shared_preferences: 2.5.3
 
   #DI
-  get_it: ^8.0.3
+  get_it: ^8.2.0
   hive_flutter: ^1.1.0
 
-  #gauges chart
-  syncfusion_flutter_gauges: ^29.2.4
   intl: ^0.20.2
   
   json_annotation: ^4.9.0
@@ -44,11 +42,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  build_runner: ^2.4.15
-  json_serializable: ^6.9.0
+  flutter_lints: ^6.0.0
+  build_runner: ^2.4.9
   hive_generator: ^2.0.1
+  json_serializable: ^6.8.0
 
+dependency_overrides:
+  analyzer: ^6.4.1
 
 flutter:
   uses-material-design: true
